Fix logo alignment

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -746,7 +746,7 @@ div#categoriestwo {
 		position: absolute;
 		left: 0;
 		margin-left: 12px;
-		/*right: 0;*/
+		right: 0;
 		top: 9px;
 	}
 
